# hw3-peterforberg

./: .gitignore  Makefile  README.md  ai_documentation.txt  environment.yml  myst.yml
ligotools/: LICENSE  README.md  pyproject.toml
ligotools/ligotools/: __init__.py  utils.py
ligotools/ligotools/tests/: test_readligo.py  test_utils.py
