[build-system]
requires = ["setuptools >= 70"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  { name="Peter Forberg", email="peterforberg@berkeley.edu" },
  { name="Ligo Scientific Collaboration (LSC)" },
]

description = "A Python library to help run LIGO code, designed for educational purposes"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "numpy==2.0",
    "scipy==1.13",
    "h5py==3.12",
    "matplotlib==3.9",
    "scipy==1.13",
    "ipykernel==6.29"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["tools", "LIGO"]
dynamic = ["version"]

[tool.setuptools]
packages = ["ligotools"]

[tool.setuptools.dynamic]
version = {attr = "ligotools.__version__"}